# nivara-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  quickbadge.html  quickbar.html  tailwind.config.js  vite.config.ts
.github/workflows/: linux-build.yml  release.yml
.tauri/: nivara.key.pub
scripts/: build-signed.ps1  bundle-exo.js  scan-models.cjs
scripts/agent-browser/: index.js  package.json
src/: App.tsx  index.css  main.tsx  quickbadge.ts  quickbar.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/exo-node/: main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AiSourcePicker.tsx  FeedbackModal.tsx  FirstRunSetup.tsx  Icon.tsx  LoginScreen.tsx  MeshBuyModal.tsx  Sidebar.tsx  Skeleton.tsx  TitleBar.tsx  TourOverlay.tsx  UpgradeModal.tsx
src/components/automation/: FlowCanvas.tsx
src/components/coder/: AIChat.tsx  ConnectionBar.tsx  Editor.tsx  FileTree.tsx  PromptLibrary.tsx  Terminal.tsx
src/components/guard/: ComplianceChecker.tsx  ContractScanner.tsx  ThreatDashboard.tsx  VulnBriefing.tsx
src/components/krew/: AgentGrid.tsx  AgentStatus.tsx  AutomationProposalModal.tsx  ConnectApps.tsx  ConversationList.tsx  CreatorScreen.tsx  KrewChat.tsx  OfficeView.tsx  OutreachCopilot.tsx  ResearchScreen.tsx  ServiceSetupModal.tsx  SkillsPanel.tsx  TaskProgress.tsx  TodoPanel.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useResize.ts  useTerminal.ts
src/lib/: ai.ts  aiSource.ts  automationRunner.ts  byokKeys.ts  chatDb.ts  connectAppsRequest.ts  deck.ts  deckStore.ts  docgen.ts  guardDb.ts  guardOcr.ts  guardScan.ts  guardWatch.ts  knowledgeStore.ts  krewAgents.ts  krewDb.ts  krewMcp.ts  krewTools.ts  leadTable.ts  localModelAdvice.ts  planConfig.ts  researchSources.ts  skills.ts  social.ts  supabase.ts  todoStore.ts  tokenTier.ts  tokenTracker.ts  userLocation.ts  verify.ts
src/modules/: AccountPanel.tsx  AutomationModule.tsx  BrainModule.tsx  CoderModule.tsx  GuardModule.tsx  HeadModule.tsx  HomeModule.tsx  InfoModule.tsx  KrewModule.tsx  MeshModule.tsx  ModelsModule.tsx  SettingsModule.tsx  StudioModule.tsx  VaultModule.tsx
