[package]
name = "nivara-desktop"
version = "1.0.0"
description = "Nivara Desktop — India's AI operating system"
authors = ["Nivara Technologies"]
edition = "2021"

[lib]
name = "nivara_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell   = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-updater = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
portable-pty       = "0.9"
rusqlite           = { version = "0.31", features = ["bundled"] }
uuid               = { version = "1",  features = ["v4"] }
reqwest            = { version = "0.12", features = ["json", "stream"] }
futures-util       = "0.3"
tokio              = { version = "1", features = ["full"] }
sysinfo            = "0.32"
imap               = "2"
native-tls         = "0.2"
cron               = "0.12"
chrono             = "0.4"
notify             = "6"
keyring            = "3"
