[package]
name = "nivara-desktop"
version = "1.2.8"
description = "adris.tech Desktop — India's AI operating system"
authors = ["adris.tech"]
edition = "2021"
default-run = "nivara-desktop"

[lib]
name = "nivara_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "exo-node"
path = "exo-node/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell   = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
portable-pty       = "0.9"
rusqlite           = { version = "0.31", features = ["bundled"] }
uuid               = { version = "1",  features = ["v4"] }
reqwest            = { version = "0.12", features = ["json", "stream"] }
futures-util       = "0.3"
zip                = { version = "2", default-features = false, features = ["deflate"] }
tokio              = { version = "1", features = ["full"] }
sysinfo            = "0.32"
imap               = "2"
native-tls         = "0.2"
cron               = "0.12"
chrono             = "0.4"
notify             = "6"
keyring            = "3"
cpal               = "0.15"
hound              = "3.5"
base64             = "0.22"
sha2               = "0.10"
hmac               = "0.12"
# Brain file-extraction (cross-platform, pure Rust): spreadsheets, PDFs, Office XML.
calamine           = "0.26"
pdf-extract        = "0.7"
quick-xml          = "0.36"
